# NumericalHPC

./: .gitignore
DMVM/: CMakeLists.txt  compile.sh
DMVM/impl/: CMakeLists.txt  main.c
DMVM/lib/: CMakeLists.txt
DMVM/lib/include/: util.h
DMVM/lib/src/: dmvm.c
